fix(launcher): apply --add-opens via redefineModule and propagate modsDir to child JVM
Same-JVM launch was failing with InaccessibleObjectException because
--add-opens entries from the NeoForge args file were skipped. Since
JARs added via appendToSystemClassLoaderSearch become part of the unnamed
module, we cannot use the named-module targets from the args file — we
need to open packages to the unnamed module instead.

Changes:
- Parse --add-opens/--add-exports tokens (both two-part and =value forms)
  and apply them via Instrumentation.redefineModule targeting the unnamed
  module, so UnionFileSystem's clinit can access java.lang.invoke.
- Broaden the exception catch around Method.invoke to cover
  InvocationTargetException (and anything else) with fallback to
  legacyLaunch, not just ClassNotFoundException.
- legacyLaunch now forwards fml.modsDir/fml.modFolder as -D flags so
  the child JVM can see lunararc-bridge.jar in .lunararc/mods/.

https://claude.ai/code/session_01DjqMGeiYWS62JnKNXw4Jxo