@@ -7,6 +7,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.jar.JarFile;
 
 public class NeoForgeLauncher {
@@ -108,6 +110,13 @@ public class NeoForgeLauncher {
                 addPathEntriesToClassLoader(token.substring("--module-path=".length()));
             } else if (token.startsWith("--classpath=") || token.startsWith("-classpath=")) {
                 addPathEntriesToClassLoader(token.substring(token.indexOf('=') + 1));
+            } else if (token.equals("--add-opens") || token.equals("--add-exports")) {
+                // Apply via Instrumentation.redefineModule so they take effect in-process.
+                if (i < tokens.size()) applyModuleDirective(token, tokens.get(i++));
+            } else if (token.startsWith("--add-opens=")) {
+                applyModuleDirective("--add-opens", token.substring("--add-opens=".length()));
+            } else if (token.startsWith("--add-exports=")) {
+                applyModuleDirective("--add-exports", token.substring("--add-exports=".length()));
             } else if (token.startsWith("-X") || token.startsWith("-ea") || token.startsWith("-da")
                     || token.startsWith("--add-") || token.startsWith("-javaagent")) {
                 // Other JVM-only args that cannot be applied post-startup — skip.
@@ -138,9 +147,40 @@ public class NeoForgeLauncher {
             Method main = Class.forName(mainClass, true, ClassLoader.getSystemClassLoader())
                     .getMethod("main", String[].class);
             main.invoke(null, (Object) gameArgs.toArray(new String[0]));
-        } catch (ClassNotFoundException e) {
-            System.err.println("[LunarArc] Same-JVM launch failed (" + e.getMessage() + "); falling back to child process.");
+        } catch (Exception e) {
+            Throwable cause = e.getCause() != null ? e.getCause() : e;
+            System.err.println("[LunarArc] Same-JVM launch failed (" + cause.getClass().getSimpleName()
+                    + ": " + cause.getMessage() + "); falling back to child process.");
             legacyLaunch(argsFile);
+        }
+    }
+
+    private static void applyModuleDirective(String directive, String spec) {
+        // spec = "moduleName/packageName=target" — target is ignored because the JARs
+        // are loaded into the unnamed module (not as named modules), so we open/export
+        // to the unnamed module unconditionally.
+        try {
+            int slash = spec.indexOf('/');
+            if (slash < 0) return;
+            String moduleName = spec.substring(0, slash);
+            String rest = spec.substring(slash + 1);
+            String packageName = rest.contains("=") ? rest.substring(0, rest.indexOf('=')) : rest;
+
+            Module module = ModuleLayer.boot().findModule(moduleName).orElse(null);
+            if (module == null) return;
+
+            Module unnamed = ClassLoader.getSystemClassLoader().getUnnamedModule();
+            boolean isOpens = "--add-opens".equals(directive);
+            LunarArcAgent.instrumentation.redefineModule(
+                    module,
+                    Set.of(),
+                    isOpens ? Map.of() : Map.of(packageName, Set.of(unnamed)),
+                    isOpens ? Map.of(packageName, Set.of(unnamed)) : Map.of(),
+                    Set.of(),
+                    Map.of()
+            );
+        } catch (Exception e) {
+            System.err.println("[LunarArc] Warning: could not apply " + directive + " " + spec + ": " + e.getMessage());
         }
     }
 
@@ -166,6 +206,12 @@ public class NeoForgeLauncher {
         List<String> jvmArgs = Files.readAllLines(argsFile);
         List<String> command = new ArrayList<>();
         command.add(LauncherUtils.getJavaExecutable());
+
+        // Propagate the bridge mods dir so FML finds lunararc-bridge.jar in the child JVM.
+        String modsDir = System.getProperty("fml.modsDir");
+        if (modsDir != null) command.add("-Dfml.modsDir=" + modsDir);
+        String modFolder = System.getProperty("fml.modFolder");
+        if (modFolder != null) command.add("-Dfml.modFolder=" + modFolder);
 
         for (String line : jvmArgs) {
             line = line.trim();
